EDT-65 EDT-85 Start laying out spigot plugin boilerplate code for the plugins and commands

--- a/spigot-plugin/src/main/resources/plugin.yml
+++ b/spigot-plugin/src/main/resources/plugin.yml
@@ -3,5 +3,9 @@ description: Spigot plugin for the Enjin Coin Minecraft Framework, a platform fo
 version: @version@-spigot
 authors: [Evan "Favorlock" Lindsay, Damien Gallagher, Tobias Drewry, Enjin Coin Team]
 website: https://enjincoin.io
-main: io.enjincoin.spigot_plugin.PluginBootstrap
+main: io.enjincoin.spigot_plugin.Main
 softdepend: [Vault]
+commands:
+    enj:
+        description: Enjin Coin root command.
+        usage: /<command> <subcommand> [args]
