--- a/gradle/deps.gradle
+++ b/gradle/deps.gradle
@@ -4,6 +4,7 @@ ext.deps = [
         minecraftCommons: 'com.enjin:minecraft_commons:0.0.1-SNAPSHOT',
         enjinCoinSdk: 'io.enjincoin:java-sdk-client:0.0.1-SNAPSHOT',
         kyoriText: 'net.kyori:text:1.12-1.3.0',
+        gson: 'com.google.code.gson:gson:2.8.2',
 
         // Shadow dependencies
         spigot: 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT',
