--- a/spigot-plugin/build.gradle
+++ b/spigot-plugin/build.gradle
@@ -17,6 +17,17 @@ dependencies {
     compile project(':spigot-framework')
 }
 
+shadowJar {
+//    relocate 'com.enjin', 'io.enjincoin.spigot_plugin.shaded.enjin'
+//    relocate 'com.google', 'io.enjincoin.spigot_plugin.shaded.google'
+//    relocate 'com.pusher', 'io.enjincoin.spigot_plugin.shaded.pusher'
+//    relocate 'javax', 'io.enjincoin.spigot_plugin.shaded.javax'
+//    relocate 'net.kyori', 'io.enjincoin.spigot_plugin.shaded.kyori'
+//    relocate 'net.minidev', 'io.enjincoin.spigot_plugin.shaded.minidev.json'
+//    relocate 'okhttp3', 'io.enjincoin.spigot_plugin.shaded.okhttp3'
+//    relocate 'okio', 'io.enjincoin.spigot_plugin.shaded.okio'
+}
+
 processResources {
     filter ReplaceTokens, tokens: [
             "version": project.property("version")
