--- a/spigot-plugin/src/main/resources/plugin.yml
+++ b/spigot-plugin/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ description: Spigot plugin for the Enjin Coin Minecraft Framework, a platform fo
 version: @version@-spigot
 authors: [Evan "Favorlock" Lindsay, Damien Gallagher, Tobias Drewry, Enjin Coin Team]
 website: https://enjincoin.io
-main: io.enjincoin.spigot_plugin.Main
+main: com.enjin.enjincoin.spigot_plugin.Main
 softdepend: [Vault]
 commands:
     enj:
