Update platformBaseUrl to the current url used

--- a/spigot-framework/src/main/resources/config.json
+++ b/spigot-framework/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "platformBaseUrl": "https://enjin.v16studios.co.uk/",
+  "platformBaseUrl": "https://feature-auth.tp-enj.in/",
   "appId": 2,
   "tokens": {
     "1": {
