--- a/spigot-plugin/src/main/resources/plugin.yml
+++ b/spigot-plugin/src/main/resources/plugin.yml
@@ -9,3 +9,12 @@ commands:
     enj:
         description: Enjin Coin root command.
         usage: /<command> <subcommand> [args]
+    enj balance:
+            description: Display wallet address and Ethereum and Enjin Coin balances as well as a list of owned CrytoItems.
+            usage: /<command> <subcommand> [args]
+    enj link:
+            description: Display linking code or linked address if available.
+            usage: /<command> <subcommand> [args]
+    enj wallet:
+            description: Opens a wallet inventory panel which allows for checkout of owned CrytoItems.
+            usage: /<command> <subcommand> [args]
