--- a/spigot-plugin/src/main/resources/plugin.yml
+++ b/spigot-plugin/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ authors: [Evan "Favorlock" Lindsay, Damien Gallagher, Tobias Drewry, Enjin Coin 
 website: https://enjincoin.io
 main: com.enjin.enjincoin.spigot_plugin.Main
 softdepend: [Vault]
+api-version: 1.13
 commands:
     enj:
         description: Enjin Coin root command.
