--- a/spigot-framework/src/main/resources/config.json
+++ b/spigot-framework/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "platformBaseUrl": "https://feature-auth.tp-enj.in/",
+  "platformBaseUrl": "https://master.tp-enj.in/",
   "secret": "",
   "appId": 2,
   "tokens": {
@@ -12,5 +12,8 @@
       ]
     }
   },
-  "debug": false
+  "debugging": {
+    "sdk": false,
+    "plugin": false
+  }
 }
