Update plugin to sdk 0.4.0

--- a/gradle/env.gradle
+++ b/gradle/env.gradle
@@ -8,7 +8,7 @@ ext.configureJavaCompilers = {
         def compileTasks = tasks.withType(JavaCompile)
         def compilerOptions = compileTasks*.options
         compilerOptions*.encoding = 'UTF-8'
-        compilerOptions*.compilerArgs = ['-Xlint:none']
+        compilerOptions*.compilerArgs = ['-Xlint:deprecation']
 
         if (JavaVersion.current() != requiredVersion) {
             String jdkProperty = "JAVA${javaVersion}_HOME"
