Add basic send command (will be improved later) and fix some inventory issues

--- a/ecmp-spigot-plugin/src/main/resources/plugin.yml
+++ b/ecmp-spigot-plugin/src/main/resources/plugin.yml
@@ -19,3 +19,9 @@ commands:
   enj wallet:
     description: Opens a wallet inventory panel which allows for checkout of owned CrytoItems.
     usage: /<command> <subcommand> [args]
+  enj trade:
+    description: Trade tokens with another player.
+    usage: /<command> <subcommand> [args]
+  enj send:
+    description: Send a token to another player.
+    usage: /<command> <subcommand> [args]
