Use minimum plugin.yml settings to make wildcard permission work

--- a/ecmp-spigot-plugin/src/main/resources/plugin.yml
+++ b/ecmp-spigot-plugin/src/main/resources/plugin.yml
@@ -10,52 +10,25 @@ commands:
   enj:
     description: Enjin Coin root command.
     usage: /<command>
-    permission: enjincoin
   enj balance:
     description: Display wallet address and Ethereum and Enjin Coin balances as well as a list of balance CrytoItems.
     usage: /<command> balance
-    permission: enjincoin.balance
   enj link:
     description: Display linking code or linked address if available.
     usage: /<command> link
-    permission: enjincoin.link
   enj unlink:
     description: Unlink the wallet from your account.
     usage: /<command> unlink
   enj wallet:
     description: Opens a wallet inventory panel which allows for checkout of balance CrytoItems.
     usage: /<command> wallet
-    permission: enjincoin.wallet
   enj trade:
     description: Trade tokens with another player.
     usage: /<command> trade invite <player>
-    permission: enjincoin.trade
   enj send:
     description: Send a token to another player.
     usage: /<command> send <player>
-    permission: enjincoin.send
 permissions:
-  enjincoin.*:
+  ecmp.*:
+    default: op
     description: Gives access to all ECMP commands
-    children:
-      enjincoin
-      enjincoin.balance
-      enjincoin.link
-      enjincoin.unlink
-      enjincoin.wallet
-      enjincoin.trade
-      enjincoin.send
-  enjincoin:
-    default: true
-  enjincoin.balance:
-    default: true
-  enjincoin.link:
-    default: true
-  enjincoin.unlink:
-    default: true
-  enjincoin.wallet:
-    default: true
-  enjincoin.trade:
-    default: false
-  enjincoin.send:
-    default: false
