--- a/ecmp-spigot-plugin/src/main/resources/plugin.yml
+++ b/ecmp-spigot-plugin/src/main/resources/plugin.yml
@@ -28,7 +28,7 @@ commands:
   enj send:
     description: Send a token to another player
     usage: /<command> send <player>
-  enj sidebar:
+  enj scoreboard:
     description: Turns the sidebar on/off
 permissions:
   ecmp.*:
