Update to SDK 0.8.0 and fix compile errors

--- a/ecmp-spigot-framework/build.gradle
+++ b/ecmp-spigot-framework/build.gradle
@@ -12,7 +12,7 @@ repositories {
 dependencies {
     shadow deps.spigot
 
-    compile deps.minecraftCommonsSpigot;
+    compile deps.minecraftCommonsSpigot
     compile deps.enjinCoinSdk
     compile deps.kyoriText
     compile deps.gson
