EDT-3332 Update kyori to use text-api and relevant libraries

--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation deps.javaCommons
     implementation deps.minecraftCommons
     implementation deps.kyoriText
+    implementation deps.kyoriTextLegacy
+    implementation deps.kyoriTextAdapterBukkit
     implementation deps.gson
 
     api deps.enjinCoinSdk
