--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
             'javaCommons': '0.3.0-SNAPSHOT',
             'minecraftCommons': '0.1.0-SNAPSHOT',
             'enjinCoinSdk': '0.8.0-SNAPSHOT',
-            'kyoriText': '1.12-1.3.0',
+            'kyoriText': '3.0.2',
+            'kyoriTextAdapter': '3.0.3',
             'gson': '2.8.2',
             'spigot': '1.13.2-R0.1-SNAPSHOT',
             'placeholderApi': '2.10.3'
@@ -13,7 +14,9 @@ buildscript {
             'javaCommons': "com.enjin:java_commons:${versions.javaCommons}",
             'minecraftCommons': "com.enjin.minecraft_commons:spigot:${versions.minecraftCommons}",
             'enjinCoinSdk': "com.enjin:enjincoin-java-sdk:${versions.enjinCoinSdk}",
-            'kyoriText': "net.kyori:text:${versions.kyoriText}",
+            'kyoriText': "net.kyori:text-api:${versions.kyoriText}",
+            'kyoriTextLegacy': "net.kyori:text-serializer-legacy:${versions.kyoriText}",
+            'kyoriTextAdapterBukkit': "net.kyori:text-adapter-bukkit:${versions.kyoriTextAdapter}",
             'gson': "com.google.code.gson:gson:${versions.gson}",
             'spigot': "org.spigotmc:spigot-api:${versions.spigot}",
             'placeholderApi': "me.clip:placeholderapi:${versions.placeholderApi}"
