EDT-3372 Help now only shows usage if the requirements are met for a command

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -22,6 +22,10 @@ permissions:
     default: true
   ecmp.trade:
     default: true
+    children:
+      ecmp.trade.invite: true
+      ecmp.trade.accept: true
+      ecmp.trade.decline: true
   ecmp.unlink:
     default: true
   ecmp.wallet:
