EDT-3460 Implement Serbian locale

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext.versions = [
             'javaCommons': '0.3.0-SNAPSHOT',
             'minecraftCommons': '0.1.0-SNAPSHOT',
-            'enjinCoinSdk': '0.9.0-SNAPSHOT',
+            'enjinCoinSdk': '1.0.0-SNAPSHOT',
             'kyoriText': '3.0.2',
             'kyoriTextAdapter': '3.0.3',
             'gson': '2.8.2',
@@ -51,6 +51,7 @@ allprojects {
     version = '1.0.0-SNAPSHOT'
 
     repositories {
+        jcenter()
         mavenLocal()
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/groups/public/' }
