EDT-3462 Add config option to enable console translating

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -9,3 +9,7 @@ debug:
   sdk: false
   plugin: false
   sentry: ""
+experimental:
+  translate-console-messages: false
+interal:
+  config-version: 1
