--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -12,12 +12,13 @@ dependencies {
     shadow deps.placeholderApi
     shadow deps.sqlite
 
+    compileOnly deps.kyoriText
+    compileOnly deps.kyoriTextLegacy
+    compileOnly deps.kyoriTextAdapterBukkit
+    compileOnly deps.gson
+
     implementation deps.javaCommons
     implementation deps.minecraftCommons
-    implementation deps.kyoriText
-    implementation deps.kyoriTextLegacy
-    implementation deps.kyoriTextAdapterBukkit
-    implementation deps.gson
 
     api deps.enjinCoinSdk
 }
