EDT-3468 Implement support for runtime dependency downloading and loading

--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ subprojects {
     targetCompatibility = JavaVersion.VERSION_1_8
 
     dependencies {
-        implementation deps.sentry;
+        compileOnly deps.sentry;
     }
 
     javadoc {
