--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     ext.deps = [
             'javaCommons': "com.enjin:java_commons:${versions.javaCommons}",
             'minecraftCommons': "com.enjin.minecraft_commons:spigot:${versions.minecraftCommons}",
-            'enjinCoinSdk': "com.enjin:enjincoin-java-sdk:${versions.enjinCoinSdk}",
+            'enjinCoinSdk': "com.enjin:enjincoin-sdk:${versions.enjinCoinSdk}",
             'kyoriText': "net.kyori:text-api:${versions.kyoriText}",
             'kyoriTextLegacy': "net.kyori:text-serializer-legacy:${versions.kyoriText}",
             'kyoriTextAdapterBukkit': "net.kyori:text-adapter-bukkit:${versions.kyoriTextAdapter}",
