Add conf token command to serialize held item and save to config

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -19,6 +19,7 @@ permissions:
     default: false
     children:
       enjincraft.conf.set: true
+      enjincraft.conf.token: true
       enjincraft.conf.reload: true
   enjincraft.player:
     default: true
