--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     shadow deps.retrofitGson
     shadow deps.supportOptional
     shadow deps.nocatch
+    shadow deps.vault
 
     implementation deps.minecraftCommons
     implementation deps.nbtapi
