- ESP-13 Added permissions blacklist for tokens

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -13,3 +13,5 @@ experimental:
   translate-console-messages: false
 interal:
   config-version: 1
+permission-blacklist:
+  - "minecraft.command.op"
